# FaceServerQt

./: .gitignore  CMakeLists.txt  FaceServerQt 项目部署与开发指南.md  README.md
DlibDemo/: CMakeLists.txt  demo1_face_detection.cpp  demo2_face_landmarks.cpp  demo3_webcam_face.cpp  demo4_face_recognition.cpp
include/: DatabaseManager.h  FaceRecognizer.h  JwtHelper.h
src/: DatabaseManager.cpp  FaceRecognizer.cpp  JwtHelper.cpp  main.cpp
